--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -1,4 +1,5 @@
-.black-white .yellow {
+.black-white, 
+.yellow {
     font-size: 28px;
     font-family: Helvetica, "Times New Roman", sans-serif;
 }
