--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -1,27 +1,46 @@
+* {
+  margin: 12px;
+  padding: 12px;
+}
+
 body {
   background: #eee;
   font-family: sans-serif;
 }
 
 .card {
-  width: 400px;
+  width: 700px;
   background: #fff;
   margin: 16px auto;
+  padding: 20px 0px 1px 0px;
+
 }
 
 .title {
   background: #e3f4ff;
+  padding: 12px;
 }
 
 .content {
   background: #e3f4ff;
+  font-size: 26px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+
 }
 
 .button-container {
   background: #e3f4ff;
+  font-size: 26px;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  font-size: 24px;
+  display: block;
+  margin: 0 auto;
+  padding-left: 35px;
+  padding-right: 35px;
 }
