--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -3,6 +3,11 @@
   background: papayawhip;
 }
 
+ul {
+  /* this removes the dots on the list items*/
+  list-style-type: none;
+}
+
 .logo {
   font-size: 48px;
   font-weight: 900;
@@ -11,15 +16,25 @@
   padding: 4px 32px;
 }
 
-ul {
-  /* this removes the dots on the list items*/
-  list-style-type: none;
-}
-
 a {
   font-size: 22px;
   background: white;
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+/* Changes submitted: */
+.header {
+  padding: 6px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+ul {
+  padding: 0px;
+  margin: 0px;
+  display: flex;
+  gap: 6px;
 }
