--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -46,3 +46,30 @@ a {
 ul {
   list-style-type: none;
 }
+
+/* Changes Submitted */
+
+.header {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  padding: 8px;
+}
+
+.links {
+  display: flex;
+  gap: 16px;
+  margin: 0px;
+  padding: 0px;
+}
+
+.right-side {
+  display: flex;
+  margin-left: auto;
+  gap: 16px;
+  align-items: center;
+}
+
+.profile-image {
+  flex-shrink: 0;
+}
