--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -67,3 +67,27 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+/* Changes Submitted */
+
+.modal {
+  display: flex;
+  padding: 12px;
+  gap: 12px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.icon {
+  flex-shrink: 0;
+}
+
+.text {
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
