--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -46,3 +46,32 @@ html {
   color: white;
   text-align: left;
 }
+
+
+/*MY SOLUTION*/
+
+.container {
+  display: grid;
+  gap: 10px;
+  grid: 10% 10% 60% 10% / 24% 24% 24% 24%;
+}
+
+.header {
+  grid-column: 1 / -1;
+}
+
+.sidebar {
+  grid-row: 2 / 4;
+}
+
+.nav {
+  grid-column: 2 / -1;
+}
+
+.article {
+  grid-column: 2 / -1;
+}
+
+.footer {
+  grid-column: 1 / -1;
+}
