--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -89,3 +89,66 @@
   font-size: 13px;
   font-weight: normal;
 }
+
+/*MY SOLUTION*/
+
+li {
+  list-style-type: none;
+}
+
+.container {
+  display: grid;
+  gap: 4px;
+  grid-template-rows: 1fr 1fr 13fr 1fr;
+  grid-template-columns: 1fr 4fr;
+  height: 100vh;
+}
+
+.header {
+  grid-column: 1 / -1;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  align-items: center;
+}
+
+.header .logo {
+  justify-self: start;
+}
+
+.header .menu ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.sidebar {
+  grid-row: 2 / 4;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  gap: 50px;
+
+}
+
+.sidebar div {
+  display: grid;
+  align-items: center;
+}
+
+.nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.article {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+  gap: 15px;
+}
+
+.article .card {
+  height: 200px;
+}
+
+.footer {
+  grid-column: 1 / -1;
+}
